# pangliantagege

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  plapi.service  plui.service  pyproject.toml  start_backend.py  start_frontend.py  stop_backend.py  stop_frontend.py
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: rag.py  system.py
app/core/: config.py  runtime.py
app/rag/: chain.py  preflight.py
app/rag/loaders/: processor.py
app/rag/vector_store/: manager.py
app/schemas/: rag.py  system.py
app/services/: ollama_client.py
backend/: populate_db.py  populate_techstack.py  requirements.txt
backend/config/: __init__.py  settings.py  urls.py
backend/https/: www.pangliantagege.top_certificate.pem  www.pangliantagege.top_private.key
backend/music/: admin.py  models.py  serializers.py  urls.py  views.py
backend/resume/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/: urls_api.py  views_api.py
deploy/docker/: prometheus.yml
deploy/k8s/: api.yaml
doc/: 个人网站开发计划文档.md  开发计划.md  提示词.txt  起点.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: DynamicBackground.vue  MagicCard.vue  Marquee.vue
frontend/src/router/: index.js
frontend/src/views/: AIAssistantView.vue  HomeView.vue  LoginView.vue  MessageBoardView.vue  MusicSpaceView.vue  NotFoundView.vue  ResumeView.vue  TalentsView.vue  ToolsView.vue
https/: pangliantagege.top.key  pangliantagege.top.pem
local_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: locustfile.py  stage1_preflight.py  stage2_e2e_test.py  stage3_chat_test.py
tests/: test_system.py
